--- a/style.css
+++ b/style.css
@@ -1,59 +1,89 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "montserrat", sans-serif;
-}
-html,
+/* General Body Styling */
 body {
     height: 100%;
-    width: 100vw;
-    
+    width: 100%;
+    font-family: 'Montserrat', sans-serif;
+    background-color: #ffffff;
 }
-.testinomials{
-    padding: 40px 0;
-    background-color: #eaedef;
-    color: #434343;
-    
-}
-.testinomials h1{
+
+
+.testinomials {
     text-align: center;
-    font-size: 2.5vw;
+    padding: 50px 20px;
+    background-color: #ffffff;
 }
-.border{
-    width: 270px;
-    height: 5px;
-    background-color: #6ab04c;
-    margin: 18px auto;
-    
-}
-.row{
-    width: 100vw;
-    height: 80%;
-    background-color: rgb(120, 120, 234);
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
- .col{
-    background-color: crimson;
-    flex: 40%;
-    max-width: 40%;
-    box-sizing: border-box;
-    padding: 15px;
 
+.testinomials .inner h1 {
+    font-size: 36px;
+    color: #333333;
+    margin-bottom: 10px;
 }
-.box{
-    background-color: #fff;
-    padding: 30px;
+
+.testinomials .inner .border {
+    width: 250px;
+    height: 3px;
+    background-color: #74C0FC;
+    margin: 0 auto 30px;
+}
+
+
+.testinomials .row {
+    display: block; 
+    overflow: hidden; 
+    margin: 0 auto; 
+}
+
+
+.testinomials .col {
+    float: left; 
+    width: 33%;
+    box-sizing: border-box; 
+    padding: 10px;
+}
+
+
+.testinomials .box {
+    background-image: linear-gradient(to right top, #dfe2d8, #e1e7d3, #e3ecce, #e4f0c9, #e6f5c4);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     
 }
-.box img{
-    height: 200px;
-    width: 13vw;
+
+
+
+
+.testinomials .box img {
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
+    margin-bottom: 10px;
+    object-fit: cover;
+    border: 3px solid #74C0FC;
+}
+
+.testinomials .name {
+    font-size: 18px;
+    font-weight: bold;
+    color: #333333;
+    margin-bottom: 5px;
 }
 
 
+.testinomials .star {
+    margin: 10px 0;
+    color: #FFD700; 
+}
+
+.testinomials .star i {
+    margin: 0 2px;
+}
+
+.testinomials .box p {
+    font-size: 14px;
+    color: #666666;
+    margin-top: 10px;
+    line-height: 1.6;
+}
 
 
